[fix] scroll issue on firefox

--- a/src/containers/cardList/cardList.css
+++ b/src/containers/cardList/cardList.css
@@ -28,6 +28,6 @@
 
 @media screen and (max-width: 1280px) {
   .list-cards-container {
-    min-width: calc(100vw - 14rem);
+    min-width: calc(100vw - 9.2rem);
   }
 }
